many fixes to both the mobile and desktop versions, removed gap css commands on flexbox containers and removed max-width property from the body element and added it individually to each of the main sections

--- a/styles/_footer.sass
+++ b/styles/_footer.sass
@@ -8,11 +8,12 @@
     flex-direction: column
     justify-content: center
     align-items: center
-    row-gap: 20px
+    // row-gap: 20px
     margin-bottom: 9px
 
     &__paragraph
         @include normal-text
+        margin-bottom: 20px
 
     &__social-container
         display: flex
@@ -34,6 +35,7 @@
 
         &__paragraph
             font-size: 16px
+            margin-bottom: 0
 
         &__social-icon
             font-size: 18px
