--- a/styles/_header.sass
+++ b/styles/_header.sass
@@ -67,9 +67,9 @@
 
     &__ul
         display: flex
-        column-gap: 10px
+        // column-gap: 10px
         flex-direction: column
-        row-gap: 24px
+        // row-gap: 24px
         margin-top: 16px
 
     &__link
@@ -81,6 +81,8 @@
         font-weight: 200
         margin-left: 16px
         transition: all 0.3s ease-in-out
+        display: block
+        margin-bottom: 24px
 
     &__link:hover
         color: #00F3BB
@@ -128,7 +130,7 @@
 
         &__ul
             flex-direction: row
-            column-gap: 48px
+            // column-gap: 48px
             justify-content: center
             align-items: center
 
@@ -140,6 +142,11 @@
             font-size: 16px
             font-weight: 300
             line-height: 28px
+            margin-right: 48px
+
+        .link4
+            margin-right: 0
+            
 
     [id]
         scroll-margin-top: 104px
