--- a/styles/style.sass
+++ b/styles/style.sass
@@ -5,10 +5,6 @@
 *
     @include format-document
 
-body
-    max-width: 1440px
-    margin: 0 auto
-
 @import "./_header"
 
 @import "./_main"
